cmake_minimum_required(VERSION 3.17)
project(dataStructureUsingCpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(dataStructureUsingCpp main.cpp chapter7_linked_list/216_double_linked_list_creation.cpp chapter7_linked_list/218_double_linked_list_insert01.cpp chapter7_linked_list/220_double_linked_list_insert02.cpp chapter7_linked_list/223_double_linked_list_inser03.cpp chapter7_linked_list/226_double_linked_list_delete01.cpp chapter7_linked_list/233_header_linked_list_insert.cpp chapter7_linked_list/237_circular_linked_list.cpp chapter7_linked_list/241_linked_queue.cpp chapter7_linked_list/243_linked_stack.cpp)